--- a/outputs/document/custom.yml
+++ b/outputs/document/custom.yml
@@ -52,3 +52,8 @@ title-page:
   logo:
     image: image:logo.png[]
   background-image: image:background.png[]
+image:
+  align: center
+  caption:
+    text-align: center
+    align: center
