make easy to custom pdf theme

--- a/outputs/document/dac-theme.yml
+++ b/outputs/document/dac-theme.yml
@@ -57,3 +57,7 @@ image:
   caption:
     text-align: center
     align: center
+table:
+  head:
+    background-color: #f0f0f0
+  grid-color: #ff0000
