--- a/outputs/slides/dac-theme.yml
+++ b/outputs/slides/dac-theme.yml
@@ -136,3 +136,16 @@ footer:
   verso: *shared_footer
 image:
   align: center
+  caption:
+    text-align: center
+    align: center
+table:
+  body:
+    stripe-background-color: #f0f4f9
+  border-color: #dfe2e5
+  grid-color: $table-border-color
+  head:
+    background-color: #bad4ed
+    border-bottom-width: 1
+  cell:
+    padding: [2,5,2,5]
