--- a/outputs/document/dac-theme.yml
+++ b/outputs/document/dac-theme.yml
@@ -47,7 +47,15 @@ heading:
   line-height: 1.2
   margin-bottom: $vertical-spacing
 link:
-  font-color: #002FA7
+  font-color: #3968b5
+literal:
+  background-color: #e6eef6
+  border-offset: $code-border-offset
+  border-radius: $code-border-radius
+  border-width: $code-border-width
+  border-color: $code-border-color
+  font-size: $base-font-size
+  font-family: OpenSans
 outline-list:
   indent: $base-font-size * 1.5
 footer:
