--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,4 +12,4 @@ build:
     - docker login -u $CI_REGISTRY_USER -p "$CI_REGISTRY_PASSWORD"
   script:
     - docker build -t yourdocsascode/docsascode:${CI_COMMIT_REF_NAME} .
-    - docker push yourdocsascode/docsascode:{CI_COMMIT_REF_NAME}
+    - docker push yourdocsascode/docsascode:${CI_COMMIT_REF_NAME}
