--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@
 stages:
   - build
 
-build:
+build:staging:
   stage: build
   image: docker:dind
   services:
@@ -11,5 +11,23 @@ build:
   before_script:
     - docker login -u $CI_REGISTRY_USER -p "$CI_REGISTRY_PASSWORD"
   script:
-    - docker build -t yourdocsascode/docsascode:${CI_COMMIT_REF_NAME} .
-    - docker push yourdocsascode/docsascode:${CI_COMMIT_REF_NAME}
+    - docker build -t docod/docsascode:${CI_COMMIT_REF_NAME} .
+    - docker push docod/docsascode:${CI_COMMIT_REF_NAME}
+  except:
+    - tags
+
+
+build:release:
+  stage: build
+  image: docker:dind
+  services:
+    - docker:dind
+  before_script:
+    - docker login -u $CI_REGISTRY_USER -p "$CI_REGISTRY_PASSWORD"
+  script:
+    - docker build -t docod/docsascode:${CI_COMMIT_REF_NAME} .
+    - docker tag docod/docsascode:${CI_COMMIT_REF_NAME} docod/docsascode:latest
+    - docker push docod/docsascode:${CI_COMMIT_REF_NAME}
+    - docker push docod/docsascode:latest
+  only:
+    - tags
