--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@ build:staging:
   before_script:
     - docker login -u $CI_REGISTRY_USER -p "$CI_REGISTRY_PASSWORD"
   script:
-    - docker build -t docod/docsascode:${CI_COMMIT_REF_NAME} .
-    - docker push docod/docsascode:${CI_COMMIT_REF_NAME}
+    - docker build -t docascod/docsascode:${CI_COMMIT_REF_NAME} .
+    - docker push docascod/docsascode:${CI_COMMIT_REF_NAME}
   except:
     - tags
 
@@ -25,9 +25,9 @@ build:release:
   before_script:
     - docker login -u $CI_REGISTRY_USER -p "$CI_REGISTRY_PASSWORD"
   script:
-    - docker build -t docod/docsascode:${CI_COMMIT_REF_NAME} .
-    - docker tag docod/docsascode:${CI_COMMIT_REF_NAME} docod/docsascode:latest
-    - docker push docod/docsascode:${CI_COMMIT_REF_NAME}
-    - docker push docod/docsascode:latest
+    - docker build -t docascod/docsascode:${CI_COMMIT_REF_NAME} .
+    - docker tag docascod/docsascode:${CI_COMMIT_REF_NAME} docascod/docsascode:latest
+    - docker push docascod/docsascode:${CI_COMMIT_REF_NAME}
+    - docker push docascod/docsascode:latest
   only:
     - tags
