--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,20 +3,6 @@
 stages:
   - build
 
-build:staging:
-  stage: build
-  image: docker:dind
-  services:
-    - docker:dind
-  before_script:
-    - docker login -u $CI_REGISTRY_USER -p "$CI_REGISTRY_PASSWORD"
-  script:
-    - docker build -t docascod/docsascode:${CI_COMMIT_REF_NAME} .
-    - docker push docascod/docsascode:${CI_COMMIT_REF_NAME}
-  except:
-    - tags
-
-
 build:release:
   stage: build
   image: docker:dind
@@ -30,4 +16,5 @@ build:release:
     - docker push docascod/docsascode:${CI_COMMIT_REF_NAME}
     - docker push docascod/docsascode:latest
   only:
+    - master
     - tags
