--- a/outputs/slides/dac-theme.yml
+++ b/outputs/slides/dac-theme.yml
@@ -1,6 +1,11 @@
 font:
   catalog:
     merge: true
+    Noto Serif:
+      normal: notoserif-regular-subset.ttf
+      bold: notoserif-bold-subset.ttf
+      italic: notoserif-italic-subset.ttf
+      bold_italic: notoserif-bold_italic-subset.ttf
     OpenSansLight:
       normal: OpenSans-Light.ttf
       italic: OpenSans-LightItalic.ttf
@@ -151,3 +156,6 @@ table:
     border-bottom-width: 1
   cell:
     padding: [2,5,2,5]
+ulist:
+  marker:
+    font-family: Noto Serif
