fix config extension

--- a/outputs/config.yml
+++ b/outputs/config.yml
@@ -7,7 +7,7 @@ code:
 toc:
   display: true
   levels: 1
-  title: Table OF Contents
+  title: Table of Contents
   align: right
 image:
   caption_prefix: Figure
